# code-search

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PROMPTS.md  USAGE_GUIDE.md
.claude/: hook-events.jsonl
src/: embeddings.rs  main.rs  mcp.rs  scanner.rs  search.rs  store.rs  text_index.rs
~/: PROMPTS.md
~/.claude/: hook-events.jsonl
