[package]
name = "code-search-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"
futures = "0.3"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"

# ML
candle-core = { version = "0.8", features = ["default"] }
candle-transformers = "0.8"
candle-nn = "0.8"
tokenizers = "0.21"
hf-hub = "0.4"

# DB
aws-config = "1.8"
lancedb = "0.14"
arrow-array = "53"
lazy_static = "1.5.0"
pathdiff = "0.2.3"
arrow-schema = "53"
rmcp = { version = "0.13.0", features = ["transport-io"] }
schemars = "1"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"

# Validated Tree-sitter versions (ABI 14 compatible)
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.2"
tree-sitter-python = "0.21.0"
tree-sitter-go = "0.21.2"
tree-sitter-javascript = "0.21.4"
tree-sitter-typescript = "0.21.2"
tree-sitter-java = "0.21.0"
tree-sitter-cpp = "0.21.0"
tree-sitter-php = "0.21.0"
tree-sitter-ruby = "0.21.0"
tree-sitter-c-sharp = "0.21.0"
streaming-iterator = "0.1.9"
